Small refactorings and bug fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,11 +60,11 @@ set(CMAKE_SHARED_LINKER_FLAGS_DEBUG
     FORCE)
 
 # Release build type
-set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_FLAGS} -O3"
+set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_FLAGS} -O3 -g"
     CACHE STRING
     "Flags used by the C++ compiler during Release builds."
     FORCE)
-set(CMAKE_C_FLAGS_RELEASE "${COMMON_FLAGS} -O3"
+set(CMAKE_C_FLAGS_RELEASE "${COMMON_FLAGS} -O3 -g"
     CACHE STRING
     "Flags used by the C compiler during Release builds."
     FORCE)
