Allocate filtered columns using new so that memory is not initialised. Added thread pool. Moved config into a separate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ set(ImplementationFiles
         Source/utilities/papiWrapper.cpp
         Source/utilities/systemInformation.cpp
         Source/constants/machineConstants.cpp
+        Source/config.cpp
 )
 
 # Plugin
