Start processing with a branch burst. Always use thread pool. Added verbose debug output and predicate selectivity output. DOP is either number of logical cores or the powers of two below this value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,6 +198,7 @@ set(ImplementationFiles
         Source/utilities/systemInformation.cpp
         Source/constants/machineConstants.cpp
         Source/config.cpp
+        Source/utilities/utilities.cpp
 )
 
 # Plugin
