State can be passed to the engine allowing for adaptivity for a vectorized engine that is stateless. Not parallelised and performance to be improved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,7 @@ set(ImplementationFiles
         Source/constants/machineConstants.cpp
         Source/config.cpp
         Source/utilities/utilities.cpp
+        Source/utilities/sharedDataTypes.cpp
 )
 
 # Plugin
