--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ set(ImplementationFiles
         Source/config.cpp
         Source/utilities/utilities.cpp
         Source/utilities/sharedDataTypes.cpp
+        Source/libraryLifecycle.cpp
 )
 
 # Plugin
